# momentum-trader

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LIVE_TRADING_README.md  README.md  check_gpu.py  check_trading_status.bat  check_training_progress.bat  install_packages.bat  install_packages.py  pyproject.toml  pytest.ini  refresh_packages.bat  set_alpaca_credentials.bat  set_alpaca_credentials.ps1  start_live_trading.bat  start_live_trading.ps1  start_resume_training_reset_lr.bat  start_tensorboard.bat  start_training.bat  start_training_resume.bat  test_gpu_training.py  test_live_trading.py  train.py  train.sh
.cursor/rules/: architecture.mdc  error-handling.mdc  hyperparameters.mdc  logging-standards.mdc  no-defaults.mdc  package-boundaries.mdc  python-style.mdc
.github/: dependabot.yml
config/: extract_raw_config.yaml  nvidia-powerlimit.service  split_config.yaml  training_config.yaml
githooks/: pre-commit
scripts/: analyze_trades.py  audit_per_buffer.py  env-paper.sh  eval_greedy.py  extract_training_performance.py  migrate_c51_to_iqn.py  plot_csv.py  profile_train_subset.py  profile_validate_subset.py  recover_from_collapse.py  reset_broker_accounts.py  run_training_with_watchdog.sh  tensorboard.sh  training_watchdog.sh
scripts/data_processing/: data_utils.py  extract_raw.py  preprocess_npz.py  split_data.py
tests/: conftest.py  test_data.py  test_metrics.py
tests/utils/: test_checkpoint_utils.py
