[project]
name = "momentum-trader"
version = "0.1.0"
description = "Momentum Trader monorepo (Rainbow DQN + Transformer) for crypto momentum trading"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "momentum-core",
    "momentum_env",
    "momentum_agent",
    "momentum_train",
    "momentum_live",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.0",
    "pytest-cov==7.0.0",
    "ruff",
    "build==1.3.0",
    "twine==6.2.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
momentum-core = { workspace = true }
momentum_env = { workspace = true }
momentum_agent = { workspace = true }
momentum_train = { workspace = true }
momentum_live = { workspace = true }

[tool.ruff]
line-length = 140
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PT", "TID"]
ignore = [
    "E501",
    "B008",   # Function call in default argument (common pattern for factory defaults)
    "B904",   # Raise without from: already noisy in defensive paths
    "SIM108", # ternary-over-if: often less readable in this codebase
    "SIM105", # contextlib.suppress: explicit try/except is clearer here
    "SIM117", # Combine nested with: sometimes readability wins
    "SIM102", # Nested if: nested conditions can be clearer
    "PT011",  # pytest.raises without match: too many legitimate uses
    "PT018",  # Assert composed: we deliberately write compound asserts in some tests
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["F841", "E501", "B007", "B017", "PT004", "PT012"]
"scripts/**/*.py" = ["E402"]

[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    "venv",
    "logs",
    "models",
    "results",
    "data",
    "tests/test_networks_old.py",
]
addopts = "-ra --color=yes -rP --cov=packages --cov-report=html -m 'not benchmark'"
testpaths = [
    "packages/momentum_core/tests",
    "packages/momentum_env/tests",
    "packages/momentum_agent/tests",
    "packages/momentum_train/tests",
    "packages/momentum_live/tests",
]
pythonpath = [
    ".",
    "packages/momentum_core/src",
    "packages/momentum_env/src",
    "packages/momentum_agent/src",
    "packages/momentum_train/src",
    "packages/momentum_live/src",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "tb_logging: marks tests that exercise TensorBoard SummaryWriter capture",
    "benchmark: long-running performance benchmarks; excluded from the default suite (run explicitly with `pytest -m benchmark`).",
]
